# Vulkan_HelloWorld

./: .gitignore  CMakeLists.txt  Vulkan_Project.sln  license.txt  readme.md
Vulkan_Project/: VDeleter.cpp  VDeleter.h  VulkanShowBase.cpp  VulkanShowBase.h  Vulkan_Project.vcxproj  main.cpp
Vulkan_Project/content/: helloworld_vert.spv
Vulkan_Project/shaders/: helloworld.vert
